force-app/commons/query/cache/objects/QueryCache__mdt/fields/CacheFields__c.field-meta.xml
<CustomField>
    <fullName>CacheFields__c</fullName>
    <inlineHelpText>Which fields will be used as Cache keys. Queries by these fields will be able to use cache.</inlineHelpText>
    <label>Cache Fields</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>