force-app/commons/query/cache/objects/QueryCache__mdt/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <inlineHelpText>This SOQL is used to pre-initialize query cache with records. If left empty, only records queried in code will be cached.</inlineHelpText>
    <label>SOQL</label>
    <type>TextArea</type>
</CustomField>