force-app/commons/query/cache/objects/QueryCache__mdt/fields/TimeToLive__c.field-meta.xml
<CustomField>
    <fullName>TimeToLive__c</fullName>
    <defaultValue>86400</defaultValue>
    <inlineHelpText>The amount of time, in seconds, to keep the cached value in the org cache. The maximum is 172,800 seconds (48 hours). The minimum value is 300 seconds or 5 minutes. The default value is 86,400 seconds (24 hours).
Leave blank for default value.
Only applicable for Session &amp; Organization cache.</inlineHelpText>
    <label>Time To Live (sec)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>