force-app/commons/query/cache/objects/QueryCache__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject__c</columns>
    <columns>Active__c</columns>
    <columns>Storage__c</columns>
    <columns>TimeToLive__c</columns>
    <columns>SOQL__c</columns>
    <columns>CacheFields__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>